Review étape 2 pour rendu intermédiaire